src/objects/AdmissionsDecisionInformation__c.object
<CustomObject>
    <fields>
        <fullName>AdmissionID__c</fullName>
        <externalId>true</externalId>
        <label>Admission ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission__c</fullName>
        <label>Admission</label>
        <referenceTo>Admission__c</referenceTo>
        <relationshipLabel>Admissions Decision Information</relationshipLabel>
        <relationshipName>AdmissionsDecisionInformation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CreditsAcceptedByWGU__c</fullName>
        <label>Credits Accepted by WGU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GPA__c</fullName>
        <label>GPA</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastCollegeToWGUGap__c</fullName>
        <label>Last College to WGU gap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusCode__c</fullName>
        <label>Status Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusDate__c</fullName>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StatusValue__c</fullName>
        <formula>CASE(StatusCode__c,
&apos;AAMT&apos;, 1,
&apos;PEND&apos;, 2,
&apos;ADMT&apos;, 3,
&apos;NAYT&apos;, 4,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>StatusValue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StemCourses__c</fullName>
        <label>Stem Courses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalCredits__c</fullName>
        <label>Total Credits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalEnglishCourses__c</fullName>
        <label>Total English Courses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalMathCourses__c</fullName>
        <label>Total Math Courses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Admissions Decision Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Admission__c</columns>
        <columns>StatusCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Admissions Decision Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admissions Decision Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>